--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "babel-core": "5.8.34",
     "babel-loader": "5.4.0",
     "chai-enzyme": "^0.4.2",
+    "code": "^2.3.0",
     "enzyme": "^2.3.0",
+    "lab": "^10.5.1",
     "webpack": "^1.12.6"
   }
 }
