--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "todo_sample",
   "version": "0.0.1",
-  "description": "",
+  "description": "small todo application built with react / node to introduce node.js, JSX / React, and TDD",
   "main": "app.js",
   "scripts": {
-    "test": "'"
+    "test": "node client.test.js; mocha ./.test/client --compilers js:babel-register --recursive",
+    "start": "node app.js"
   },
   "author": "dillon osman",
   "license": "MIT",
@@ -26,12 +27,17 @@
     "superagent": "^1.4.0"
   },
   "devDependencies": {
-    "babel-core": "5.8.34",
-    "babel-loader": "5.4.0",
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.9.0",
     "chai-enzyme": "^0.4.2",
     "code": "^2.3.0",
     "enzyme": "^2.3.0",
     "lab": "^10.5.1",
-    "webpack": "^1.12.6"
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
+    "webpack": "^1.13.0"
   }
 }
